--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
 
     <div id="passwordPrompt">
         <div id="passwordContainer">
+                <div class="logo">
+        <img src="https://seeklogo.com/images/P/petronas-logo-F27480A944-seeklogo.com.png" alt="Petronas Logo">
+    </div>
             <h2>Enter Password to Access</h2>
             <input type="password" id="passwordInput">
             <button onclick="checkPassword()">Submit</button>
