--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
     <div id="passwordPrompt">
         <div id="passwordContainer">
                 <div class="logo">
-        <img src="https://seeklogo.com/images/P/petronas-logo-F27480A944-seeklogo.com.png" alt="Petronas Logo">
-    </div>
+                <img src="https://seeklogo.com/images/P/petronas-logo-F27480A944-seeklogo.com.png" alt="Petronas Logo">
+                </div>
+            <h1>Maintenance Sufficiency Manhours Estimator</h1>
             <h2>Enter Password to Access</h2>
             <input type="password" id="passwordInput">
             <button onclick="checkPassword()">Submit</button>
+            <p class="brought-to-you">Brought to you by GTS Instrument & Control</p>
             <p id="passwordError" style="color: red; display: none;">Incorrect password</p>
         </div>
     </div>
